Add full integration tests